# horo-rag

./: DEMO.md  README.md  pyproject.toml  requirements.txt
backend/: chat_service.py  main.py  models.py
frontend/: index.html
