[project]
name = "horo-rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "llama-index==0.10.5",
    "llama-index-embeddings-ollama==0.1.2",
    "llama-index-llms-ollama==0.1.3",
    "llama-index-vector-stores-postgres==0.1.3",
    "pymupdf>=1.26.4",
    "python-multipart==0.0.6",
    "uvicorn[standard]==0.24.0",
]
